# ecpool

./: .travis.yml  Cargo.toml  README.md
examples/: decode.rs  encode.rs  reconstruct.rs
src/: error.rs  lib.rs  liberasurecode.rs  pool.rs  replica.rs
