[package]
name = "ecpool"
version = "1.0.0"
authors = ["Takeru Ohta <takeru_ohta@dwango.co.jp>"]
description = "Thread pool for managing executions of erasure coding"
homepage = "https://github.com/frugalos/ecpool"
repository = "https://github.com/frugalos/ecpool"
readme = "README.md"
keywords = ["erasure-coding", "thread-pool"]
categories = ["encoding", "concurrency"]
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/ecpool"}

[dependencies]
fibers = "0.1"
fibers_tasque = "0.1"
futures = "0.1"
trackable = "0.2"

[target.'cfg(unix)'.dependencies]
liberasurecode = "1.0.0"

[dev-dependencies]
clap = "2"
fibers_global = "0.1"
