[package]
edition = "2018"
name = "ecpool"
version = "1.0.2"
authors = ["The FrugalOS Developers"]
description = "Thread pool for managing executions of erasure coding"
homepage = "https://github.com/frugalos/ecpool"
repository = "https://github.com/frugalos/ecpool"
readme = "README.md"
keywords = ["erasure-coding", "thread-pool"]
categories = ["encoding", "concurrency"]
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/ecpool"}

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["sync"]}
tokio_tasque = { version = "0.1", path = "../tokio_tasque" }
trackable = "1.2"

[target.'cfg(unix)'.dependencies]
liberasurecode = "1.0.1"

[dev-dependencies]
clap = "2"
